--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bad Companies - BD | Hasib</title>
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -30,7 +31,7 @@
       </picture>
     </div>
     <footer class="mt-5 d-flex justify-content-center align-items-baseline">
-      Built with ❤️ By -
+      Built with 😡 By -
       <a href="https://github.com/hasibmuhammad">Hasib Muhammad</a>
     </footer>
     <script src="app.js"></script>
